tests/invalid/function/local_let_rec_duplicate_name.facet
fn main() -> unrestricted isize {
  let rec f(x: unrestricted isize) -> unrestricted isize {
    x
  }
  and f(y: unrestricted isize) -> unrestricted isize {
    y
  }
  in (f 1)
}
